@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.5.20 (Release 156)"
+#define KPPPVERSION "1.5.22 (Release 158)"
 #endif
